erDiagram
    Session ||--o{ ContextItem : "has"
    Session ||--o{ ContextEmbedding : "has"
    Session ||--o{ ContextSnapshot : "has"
    Session ||--o{ ContextUpdateJob : "has"
    Session ||--o{ LongTermSummary : "has"
    Session ||--|| SessionMemory : "has"
    Session ||--o{ Artifact : "has"
    Session ||--o{ AgentRun : "has"
    Session ||--o{ Message : "has"
    Session ||--o{ FileChange : "has"
    Session ||--o{ AgentEvent : "has"
    Session ||--o{ SessionAgent : "has"
    AgentRun ||--o{ Artifact : "generates"
    AgentRun ||--o{ FileChange : "generates"
    AgentRun ||--o{ AgentEvent : "generates"
    ContextItem ||--o{ ContextEmbedding : "has vector"
    Agent ||--o{ SessionAgent : "joins"
    Agent ||--o{ AgentRun : "orchestrates"
    Artifact ||--o{ FileChange : "linked to"

    Session {
        uuid id PK
        string title
        enum status "active|archived|deleted"
        uuid project_id FK
        string downstream_session_id
        json metadata
        datetime created_at
        datetime updated_at
    }

    ContextItem {
        uuid id PK
        uuid session_id FK
        string source_type
        uuid source_id FK
        enum kind "message|artifact|file_change|manual_pin"
        string text
        int token_count
        int importance
        bool pinned
        json metadata
        datetime created_at
    }

    ContextEmbedding {
        uuid id PK
        uuid context_item_id FK
        uuid session_id FK
        string model "text-embedding-3-small"
        int dims "1536"
        vector embedding "vector(1536)"
    }

    ContextSnapshot {
        uuid id PK
        uuid session_id FK
        uuid run_id FK
        int version
        int token_budget "9000"
        int token_count
        string[] selected_item_ids
        json snapshot_json
        string prompt_text
    }

    SessionMemory {
        uuid id PK
        uuid session_id UK
        string title
        string status
        json files
        json errors
        string lessons
        json work_log
        int version
    }

    Artifact {
        uuid id PK
        uuid session_id FK
        uuid run_id FK
        uuid producing_event_id
        string artifact_key
        enum kind "markdown|text|html|pdf|docx|pptx"
        string title
        string mime_type
        enum storage_kind "inline|oss|remote"
        string storage_uri
        string text_content
        string sha256
        bigint size_bytes
        bool final
    }

    LongTermSummary {
        uuid id PK
        uuid session_id FK
        int seq
        string content
        int token_count
        datetime created_at
    }

    AgentRun {
        uuid id PK
        uuid session_id FK
        int orchestrator_agent_id FK
        uuid user_message_id FK
        uuid context_snapshot_id FK
        enum status "queued|building|connecting|running|completed|failed|cancelled"
        string downstream_session_id
        string error_code
        string error_message
        json usage_json
        datetime started_at
        datetime completed_at
    }

    Message {
        uuid id PK
        uuid session_id FK
        uuid run_id FK
        enum role "user|assistant|agent|system|tool"
        int agent_id FK
        string content_text
        json content_json
        int token_count
        enum status "queued|thinking|streaming|completed|failed"
        bool is_pinned
    }

    AgentEvent {
        uuid id PK
        uuid session_id FK
        uuid run_id FK
        bigint seq
        string event_type
        string visibility "public|internal"
        int speaker_agent_id FK
        string speaker_name
        json payload
        datetime occurred_at
        datetime persisted_at
    }

    FileChange {
        uuid id PK
        uuid session_id FK
        uuid run_id FK
        uuid artifact_id FK
        string path
        enum change_type "added|modified|deleted|renamed"
        string language
        string before_content
        string after_content
        string patch
        json stats
    }

    Agent {
        int id PK
        string name UK
        int template_id FK
        string avatar_url
        string description
        int provider_id FK
        bool is_default_orchestrator
        enum status "enabled|disabled|offline|error"
    }

    SessionAgent {
        uuid session_id PK_FK
        int agent_id PK_FK
        string participant_role "member|orchestrator"
        string source "mention|invite"
        datetime first_mentioned_at
        datetime last_active_at
    }

    ContextUpdateJob {
        uuid id PK
        uuid session_id FK
        string reason
        string status "pending|running|completed|failed"
        string error_message
        datetime started_at
        datetime completed_at
    }

classDiagram
    class HubContextService {
        -tokenBudget: 9000
        -recentTokenBudget: 4800
        -retrievalLimit: 8
        -embeddingModel: "text-embedding-3-small"
        -summaryModel: "deepseek-chat"
        +recordContextItem(input) ContextItem
        +buildSnapshot(input) HubContextSnapshotDto
        +setMessagePinned(sessionId, messageId, pinned) Message
        +loadSessionMemorySummary(sessionId) string
        +loadSummaryChain(sessionId) LongTermSummaryDto[]
        -recallByPgvector(sessionId, text, limit) ContextRow[]
        -createEmbedding(text) number[]
        -persistEmbedding(id, sessionId, text) void
        -buildSessionMemory(sessionId, buffer) void
        -invokeStructuredMemoryLLM(text) Object
    }

    class ArtifactStorageService {
        +createAttachment(input) UploadedAttachmentDto
        +upsertArtifact(input) Artifact
        +storeChunk(input) Artifact
        +completeArtifact(input) Artifact
        +getContent(artifactId) ArtifactContent
        -uploadToOss(...): string
    }

    class PrismaService {
        +onModuleInit() void
        +$executeRawUnsafe(query) any
        +$queryRawUnsafe(query) any
    }

    class HubEventService {
        +append(input) void
        -handleMessageCompleted() void
        -handleFileChange() void
        -handleArtifactComplete() void
    }

    class DownstreamOrchestratorService {
        +startRun(input) void
        +cancelRun(sessionId, runId) void
        -createBootstrapSnapshot(input) ContextSnapshot
        -buildPromptInput(input) Object
        -dispatchPrompt(input) void
    }

    class HubSessionService {
        +sendMessage(input) Message
        +pinMessage(sessionId, messageId, pinned) Message
        -loadAttachmentParts(sessionId, partIds) Part[]
    }

    PrismaService <.. HubContextService : "injects"
    PrismaService <.. ArtifactStorageService : "injects"
    PrismaService <.. HubEventService : "injects"
    PrismaService <.. HubSessionService : "injects"
    PrismaService <.. DownstreamOrchestratorService : "injects"
    HubContextService <.. DownstreamOrchestratorService : "injects"
    HubContextService <.. HubEventService : "injects"
    HubContextService <.. HubSessionService : "injects"
    ArtifactStorageService <.. HubEventService : "injects"